<?xml version="1.0"?>
<package>
  <name>asv_common</name>
  <version>1.1.0</version>
  <description>The asv_common package</description>

  <maintainer email="stenersen.thomas@gmail.com">Thomas Stenersen</maintainer>
  <license>MIT</license>

  <url type="website">http://github.com/thomsten/ros_asv_common</url>
  <author email="stenersen.thomas@gmail.com">Thomas Stenersen</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>asv_ctrl_vo</run_depend>
  <run_depend>asv_msgs</run_depend>
  <run_depend>asv_obstacle_tracker</run_depend>
  <run_depend>asv_simulator</run_depend>
  <run_depend>asv_global_planner</run_depend>

</package>
