<?xml version="1.0"?>
<package>
  <name>asv_map_processing</name>
  <version>1.1.0</version>
  <description>The asv_map_processing package</description>

  <maintainer email="jb.soubaras@yahoo.fr">Jean-Baptiste Soubaras</maintainer>

  <license>MIT</license>

  <url type="website">https://github.com/Straccia11/seaowl</url>

  <author email="jb.soubaras@yahoo.fr">Jean-Baptiste Soubaras</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nav_msgs</run_depend>

</package>
