<?xml version="1.0"?>
<package>
  <name>crossLane</name>
  <version>1.1.0</version>
  <description>The crossLane package</description>

  <maintainer email="adrien.lopez@polytechnique.edu">Adrien Lopez</maintainer>
  <license>Polytechnique</license>

  <url type="website">http://github.com/thomsten/ros_asv_system</url>
  <author email="adrien.lopez@polytechnique.edu">Adrien Lopez</author>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>asv_ctrl_vo</run_depend>
  <run_depend>asv_msgs</run_depend>
  <run_depend>asv_obstacle_tracker</run_depend>
  <run_depend>asv_simulator</run_depend>
  <run_depend>asv_global_planner</run_depend>

</package>
