<?xml version="1.0"?>
<package>
  <name>test</name>
  <version>1.1.0</version>
  <description>The test package</description>

  <maintainer email="jb.soubaras@yahoo.fr">Jean-Baptiste Soubaras</maintainer>
  <license>MIT</license>

  <author email="jb.soubaras@yahoo.fr">Jean-Baptiste Soubaras</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <run_depend>rospy</run_depend>
  <build_depend>roscpp</build_depend>

</package>
